--- a/coordinate/coordinate.html
+++ b/coordinate/coordinate.html
@@ -6,7 +6,7 @@
 
     <style>
         body {
-            background: black;
+            background: white;
         }
 
         #canvas {
@@ -16,6 +16,8 @@
     </style>
 </head>
 <body>
+
+<div id="readOut"></div>
 
 <canvas id="canvas" width="600" height="300">
     canvas not support
